Prevent central header part with search line from jumping when turning on/off the extension

--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,7 @@ body {
 
 body.fy-results-page #guide-button,
 body.fy-results-page #guide-content,
-body.fy-results-page #end,
+body.fy-results-page #buttons.ytd-masthead,
 body.fy-results-page #sub-menu,
 body.fy-results-page ytd-horizontal-card-list-renderer,
 body.fy-results-page ytd-channel-renderer,
@@ -99,7 +99,7 @@ body.fy-results-page .ytd-item-section-renderer {
 
 body.fy-watch-page #guide-button,
 body.fy-watch-page #guide-content,
-body.fy-watch-page #end,
+body.fy-watch-page #buttons.ytd-masthead,
 body.fy-watch-page #sub-menu,
 body.fy-watch-page #related,
 body.fy-watch-page #subscribe-button,
@@ -111,8 +111,8 @@ body.fy-watch-page .ytp-ce-element, /* Remove end-video subscribe and author rec
 body.fy-watch-page .ytp-ce-element.ytp-ce-channel.ytp-ce-channel-this, /* Remove YT premium/TV nudges */
 body.fy-watch-page .ytp-pause-overlay, /* hide suggest video popup when embedded videos paused */
 body.fy-watch-page .ytp-next-button, /* Remove play next button */
-body.fy-watch-page .html5-endscreen /* Remove suggested video endscreen */
-body.fy-watch-page ytd-live-chat-frame /* Hide live chat and chat replay */
+body.fy-watch-page .html5-endscreen, /* Remove suggested video endscreen */
+body.fy-watch-page ytd-live-chat-frame, /* Hide live chat and chat replay */
 body.fy-watch-page .ytd-browse .app-header {
   display: none !important;
 }
